# orchid

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.orchid/: .gitignore  architecture.json  architecture.md  spec.json  spec.md
src/orchid/: bus.py  config.py  git_ops.py  main.py  models.py  notify.py  services.py
src/orchid/api/: app.py  architecture.py  collaborations.py  elevation.py  inbox.py  onboarding_api.py  permissions.py  plans.py  policies.py  projects.py  reviews.py  sessions.py  specs.py  ws.py
src/orchid/claude/: architecture_tools.py  catalog.py  collaboration.py  consult.py  driver.py  driver_manager.py  elevated_tools.py  git_tools.py  onboarding.py  planning.py  roles.py  runner.py  spec_tools.py  transcript.py
src/orchidd/: acl.py  config.py  main.py  ops.py  protocol.py  server.py
tests/: conftest.py  test_agents_plan_store.py  test_api_projects.py  test_api_sessions.py  test_architecture.py  test_bus.py  test_catalog.py  test_collaboration.py  test_driver.py  test_driver_manager.py  test_git_tools.py  test_inbox.py  test_live_sdk.py  test_notify.py  test_onboarding_tools.py  test_orchidd_acl.py  test_orchidd_server.py  test_paths.py  test_planning.py  test_policy_store.py  test_project_store.py  test_registry.py  test_review_store.py  test_roles.py  test_session_mgmt.py  test_session_service.py  test_spec.py  test_transcript.py  test_transcript_cache.py  test_usage_store.py  test_watcher.py  test_ws.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  notify.ts
(+47 files in other folders)
