[project]
name = "orchid"
version = "0.1.0"
description = "Web manager for Claude Code sessions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "claude-agent-sdk==0.2.99",
    "watchfiles>=0.24",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "requests>=2.32",
    "websockets>=13",
]

[project.scripts]
orchid = "orchid.main:run"
orchidd = "orchidd.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchid", "src/orchidd"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
